Fixed login screen front end bugs on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1002,7 +1002,6 @@ body {
     background-color: #F6F6F6;
     border: 1px solid #dddddd;
     max-width: 40rem;
-    margin-left: 5rem;
     padding: 3rem;
     border-radius: .7rem;
     position: absolute;
@@ -1011,10 +1010,14 @@ body {
     transform: translate(-50%, -50%);
     box-shadow: 0px 3px 5px 5px rgba(50, 50, 50, 0.3);
     width: 60%; }
+    @media only screen and (max-width: 56.25em) {
+      .login-page__form {
+        width: 80%; } }
   .login-page__logo {
     display: block;
     margin: 0 auto;
-    margin-bottom: 1rem; }
+    margin-bottom: 1rem;
+    max-width: 100%; }
   .login-page__link {
     display: block;
     text-align: center; }
